--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Красивые фотки с разных мест" />
     <meta name="author" content="Рыбаков Илья" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <title>Document</title>
+    <title>Mesto</title>
   </head>
   <body class="root">
     <div class="page">
@@ -36,7 +33,7 @@
             <button class="profile__add-button" type="button"></button>
           </div>
         </section>
-        <section class="cards">
+        <section class="cards" aria-label="Фотографии автора с подписями">
           <ul class="cards__list">
             <li class="card">
               <figure class="card__figure">
@@ -137,14 +134,14 @@
       </main>
 
       <footer class="footer">
-        <p class="footer__copyright">&copy; Рыбаков Илья</p>
+        <p class="footer__copyright">&copy; 2021 Рыбаков Илья</p>
       </footer>
 
       <div class="popup popup_opened">
         <div class="popup__container">
           <button class="popup__button-close" type="button"></button>
           <form class="popup__form">
-            <h3 class="popup__form-title">Редактировать профиль</h3>
+            <h2 class="popup__form-title">Редактировать профиль</h2>
             <input
               class="popup__form-user-name"
               type="text"
