fix: добавлены alt для фотографий

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
           <ul class="cards__list">
             <li class="card">
               <figure class="card__figure">
-                <img class="card__image" src="./images/balos.jpg" alt="" />
+                <img
+                  class="card__image"
+                  src="./images/balos.jpg"
+                  alt="Пляж Балос, о.Крит"
+                />
                 <figcaption class="card__caption">
                   <p class="card__caption-title">Пляж Балос, о.Крит</p>
                   <img
@@ -53,7 +57,7 @@
                 <img
                   class="card__image"
                   src="./images/berlin-wall.jpg"
-                  alt=""
+                  alt="Берлинская стена"
                 />
                 <figcaption class="card__caption">
                   <p class="card__caption-title">Берлинская стена</p>
@@ -70,7 +74,7 @@
                 <img
                   class="card__image"
                   src="./images/marsascala-malta.jpg"
-                  alt=""
+                  alt="Бухта Марсаскала"
                 />
                 <figcaption class="card__caption">
                   <p class="card__caption-title">Бухта Марсаскала</p>
@@ -87,7 +91,7 @@
                 <img
                   class="card__image"
                   src="./images/monolitos-rodos.jpg"
-                  alt=""
+                  alt="Замок Монолитос, о.Родос"
                 />
                 <figcaption class="card__caption">
                   <p class="card__caption-title">Замок Монолитос, о.Родос</p>
@@ -104,7 +108,7 @@
                 <img
                   class="card__image"
                   src="./images/ramla-beach-Gozo.jpg"
-                  alt=""
+                  alt="Пляж Рамла, о.Гозо"
                 />
                 <figcaption class="card__caption">
                   <p class="card__caption-title">Пляж Рамла, о.Гозо</p>
@@ -118,7 +122,11 @@
             </li>
             <li class="card">
               <figure class="card__figure">
-                <img class="card__image" src="./images/valletta.jpg" alt="" />
+                <img
+                  class="card__image"
+                  src="./images/valletta.jpg"
+                  alt="Валлетта, Мальта"
+                />
                 <figcaption class="card__caption">
                   <p class="card__caption-title">Валлетта, Мальта</p>
                   <img
