--- a/index.html
+++ b/index.html
@@ -152,12 +152,14 @@
               type="text"
               name="user-name"
               placeholder="Ваше имя"
+              required
             />
             <input
               class="popup__input popup__input_type_job"
               type="text"
               name="user-vocation"
               placeholder="Ваше призвание"
+              required
             />
             <button class="popup__form-button" type="submit">Сохранить</button>
           </form>
