fix: исправление после второго ревью

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                   <button
                     class="card__button-like card__button-like_active"
                     aria-label="лайк"
+                    type="button"
                   ></button>
                 </div>
               </article>
@@ -68,7 +69,11 @@
                 />
                 <div class="card__caption">
                   <h2 class="card__caption-title">Берлинская стена</h2>
-                  <button class="card__button-like" aria-label="лайк"></button>
+                  <button
+                    class="card__button-like"
+                    aria-label="лайк"
+                    type="button"
+                  ></button>
                 </div>
               </article>
             </li>
@@ -84,6 +89,7 @@
                   <button
                     class="card__button-like card__button-like_active"
                     aria-label="лайк"
+                    type="button"
                   ></button>
                 </div>
               </article>
@@ -97,7 +103,11 @@
                 />
                 <div class="card__caption">
                   <h2 class="card__caption-title">Замок Монолитос, о.Родос</h2>
-                  <button class="card__button-like" aria-label="лайк"></button>
+                  <button
+                    class="card__button-like"
+                    aria-label="лайк"
+                    type="button"
+                  ></button>
                 </div>
               </article>
             </li>
@@ -110,7 +120,11 @@
                 />
                 <div class="card__caption">
                   <h2 class="card__caption-title">Пляж Рамла, о.Гозо</h2>
-                  <button class="card__button-like" aria-label="лайк"></button>
+                  <button
+                    class="card__button-like"
+                    aria-label="лайк"
+                    type="button"
+                  ></button>
                 </div>
               </article>
             </li>
@@ -126,6 +140,7 @@
                   <button
                     class="card__button-like card__button-like_active"
                     aria-label="лайк"
+                    type="button"
                   ></button>
                 </div>
               </article>
@@ -145,8 +160,8 @@
             type="button"
             aria-label="закрыть форму редактировать профиль"
           ></button>
+          <h3 class="popup__form-title">Редактировать профиль</h3>
           <form class="popup__form" name="edit-form">
-            <h3 class="popup__form-title">Редактировать профиль</h3>
             <input
               class="popup__input popup__input_type_name"
               type="text"
