--- a/index.html
+++ b/index.html
@@ -42,110 +42,7 @@
           </div>
         </section>
         <section class="cards" aria-label="Фотографии автора с подписями">
-          <ul class="cards__list">
-            <li class="card">
-              <article class="card__article">
-                <img
-                  class="card__image"
-                  src="./images/balos.jpg"
-                  alt="Пляж Балос, о.Крит"
-                />
-                <div class="card__caption">
-                  <h2 class="card__caption-title">Пляж Балос, о.Крит</h2>
-                  <button
-                    class="card__button-like card__button-like_active"
-                    aria-label="лайк"
-                    type="button"
-                  ></button>
-                </div>
-              </article>
-            </li>
-            <li class="card">
-              <article class="card__article">
-                <img
-                  class="card__image"
-                  src="./images/berlin-wall.jpg"
-                  alt="Берлинская стена"
-                />
-                <div class="card__caption">
-                  <h2 class="card__caption-title">Берлинская стена</h2>
-                  <button
-                    class="card__button-like"
-                    aria-label="лайк"
-                    type="button"
-                  ></button>
-                </div>
-              </article>
-            </li>
-            <li class="card">
-              <article class="card__article">
-                <img
-                  class="card__image"
-                  src="./images/marsascala-malta.jpg"
-                  alt="Бухта Марсаскала"
-                />
-                <div class="card__caption">
-                  <h2 class="card__caption-title">Бухта Марсаскала</h2>
-                  <button
-                    class="card__button-like card__button-like_active"
-                    aria-label="лайк"
-                    type="button"
-                  ></button>
-                </div>
-              </article>
-            </li>
-            <li class="card">
-              <article class="card__article">
-                <img
-                  class="card__image"
-                  src="./images/monolitos-rodos.jpg"
-                  alt="Замок Монолитос, о.Родос"
-                />
-                <div class="card__caption">
-                  <h2 class="card__caption-title">Замок Монолитос, о.Родос</h2>
-                  <button
-                    class="card__button-like"
-                    aria-label="лайк"
-                    type="button"
-                  ></button>
-                </div>
-              </article>
-            </li>
-            <li class="card">
-              <article class="card__article">
-                <img
-                  class="card__image"
-                  src="./images/ramla-beach-Gozo.jpg"
-                  alt="Пляж Рамла, о.Гозо"
-                />
-                <div class="card__caption">
-                  <h2 class="card__caption-title">Пляж Рамла, о.Гозо</h2>
-                  <button
-                    class="card__button-like"
-                    aria-label="лайк"
-                    type="button"
-                  ></button>
-                </div>
-              </article>
-            </li>
-            <li class="card">
-              <article class="card__article">
-                <img
-                  class="card__image"
-                  src="./images/valletta.jpg"
-                  alt="Валлетта, Мальта"
-                />
-                <div class="card__caption">
-                  <h2 class="card__caption-title">Валлетта, Мальта</h2>
-                  <button
-                    class="card__button-like card__button-like_active"
-                    aria-label="лайк"
-                    type="button"
-                  ></button>
-                </div>
-              </article>
-            </li>
-          </ul>
+          <ul class="cards__list"></ul>
         </section>
       </main>
 
@@ -153,7 +50,7 @@
         <p class="footer__copyright">&copy; 2021 Рыбаков Илья</p>
       </footer>
 
-      <div class="popup">
+      <div class="popup popup_edit">
         <div class="popup__container">
           <button
             class="popup__button-close"
@@ -181,6 +78,74 @@
         </div>
       </div>
     </div>
+
+    <div class="popup popup_add">
+      <div class="popup__container">
+        <button
+          class="popup__button-close"
+          type="button"
+          aria-label="закрыть форму добавления"
+        ></button>
+        <h3 class="popup__form-title">Новое место</h3>
+        <form class="popup__form" name="edit-form">
+          <input
+            class="popup__input popup__input_type_place-name"
+            type="text"
+            name="place-name"
+            placeholder="название"
+            required
+          />
+          <input
+            class="popup__input popup__input_type_place-link"
+            type="text"
+            name="place-link"
+            placeholder="ссылка на картинку"
+            required
+          />
+          <button class="popup__form-button" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup__view-image">
+      <div class="popup__wrapper">
+        <button
+          class="popup__button-close"
+          type="button"
+          aria-label="закрыть форму добавления"
+        ></button>
+        <img class="popup__image" src="" alt="" />
+        <p class="popup__image-caption"></p>
+      </div>
+    </div>
+
+    <template class="cards__template">
+      <li class="card">
+        <article class="card__article">
+          <button
+            class="card__trash"
+            aria-label="корзина"
+            type="button"
+          ></button>
+          <img
+            class="card__image"
+            alt=""
+            src=""
+          />
+          <div class="card__caption">
+            <h2 class="card__caption-title"></h2>
+            <button
+              class="card__button-like"
+              aria-label="лайк"
+              type="button"
+            ></button>
+          </div>
+        </article>
+      </li>
+    </template>
+
     <script src="./scripts/pop-up.js"></script>
+    <script src="./scripts/card__like.js"></script>
+    <script src="./scripts/initialCards.js"></script>
   </body>
 </html>
