refactor: переделал функцию добавления карточек

--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
       </div>
     </div>
 
-    <div class="popup popup__view-image">
+    <div class="popup popup_view-image">
       <div class="popup__wrapper">
         <button
           class="popup__button-close"
           type="button"
           aria-label="закрыть форму добавления"
         ></button>
-        <img class="popup__image" src="" alt="" />
+        <img class="popup__image" src="#" alt="#" />
         <p class="popup__image-caption"></p>
       </div>
     </div>
 
-    <template class="cards__template">
+    <template class="cards cards_template">
       <li class="card">
         <article class="card__article">
           <button
@@ -127,11 +127,7 @@
             aria-label="корзина"
             type="button"
           ></button>
-          <img
-            class="card__image"
-            alt=""
-            src=""
-          />
+          <img class="card__image" alt="" src="" />
           <div class="card__caption">
             <h2 class="card__caption-title"></h2>
             <button
@@ -145,7 +141,6 @@
     </template>
 
     <script src="./scripts/pop-up.js"></script>
-    <script src="./scripts/card__like.js"></script>
     <script src="./scripts/initialCards.js"></script>
   </body>
 </html>
