refactor: переделал функцию добавления карточек

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             aria-label="корзина"
             type="button"
           ></button>
-          <img class="card__image" alt="" src="" />
+          <img class="card__image" alt="#" src="#" />
           <div class="card__caption">
             <h2 class="card__caption-title"></h2>
             <button
