refactor: переделал функцию cardView, вынес константы в глобальную область

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           aria-label="закрыть форму добавления"
         ></button>
         <img class="popup__image" src="#" alt="#" />
-        <p class="popup__image-caption"></p>
+        <p class="popup__image-caption">подпись</p>
       </div>
     </div>
 
