feat: реакция кнопки на валидацию

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <span class="userJob-input-error popup__input-error"></span>
 
-            <button class="popup__form-button" type="submit">Сохранить</button>
+            <button class="popup__submit" type="submit">Сохранить</button>
 
           </form>
 
@@ -130,7 +130,7 @@
 
           <span class="placeLink-input-error popup__input-error"></span>
 
-          <button class="popup__form-button" type="submit">Сохранить</button>
+          <button class="popup__submit" type="submit">Сохранить</button>
         </form>
 
       </div>
