--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
         </article>
       </li>
     </template>
-
-    <script src="./scripts/pop-up.js"></script>
-    <script src="./scripts/initialCards.js"></script>
-    <script src="scripts/validate.js"></script>
+    <script src="scripts/constants.js"></script>
+    <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
