--- a/index.html
+++ b/index.html
@@ -169,8 +169,11 @@
         </article>
       </li>
     </template>
-    <script src="scripts/constants.js"></script>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script src="./utils/constants.js" type="module"></script>
+    <script src="./scripts/index.js" type="module"></script>
+    <script src="scripts/Card.js" type="module"></script>
+    <script src="scripts/FormValidator.js" type="module"></script>
+
+
   </body>
 </html>
