--- a/index.html
+++ b/index.html
@@ -171,9 +171,7 @@
     </template>
     <script src="./utils/constants.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
-    <script src="scripts/Card.js" type="module"></script>
-    <script src="scripts/FormValidator.js" type="module"></script>
-
-
+    <script src="./scripts/Card.js" type="module"></script>
+    <script src="./scripts/FormValidator.js" type="module"></script>
   </body>
 </html>
