--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Красивые фотки с разных мест" />
     <meta name="author" content="Рыбаков Илья" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./pages/index.css" />
+<!--    <link rel="stylesheet" href="./pages/index.css" />-->
     <title>Mesto</title>
   </head>
   <body class="root">
@@ -169,6 +169,6 @@
         </article>
       </li>
     </template>
-    <script src="./scripts/index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
