--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Красивые фотки с разных мест" />
     <meta name="author" content="Рыбаков Илья" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<!--    <link rel="stylesheet" href="./pages/index.css" />-->
     <title>Mesto</title>
   </head>
   <body class="root">
@@ -19,7 +18,7 @@
         <section class="profile">
           <img
             class="profile__avatar"
-            src="./images/me-avatar.jpg"
+            src=<%=require("./images/me-avatar.jpg")%>
             alt="Портрет автора фотографий - Рыбакова Ильи"
           />
           <div class="profile__info">
