feat: sprint №9 класс Api добавлен метод getUser и editUser, настроил профиль и изменения профиля через форму

--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,14 @@
           />
           <div class="profile__info">
             <div class="profile__title-container">
-              <h1 class="profile__title">Рыбаков Илья</h1>
+              <h1 class="profile__title"></h1>
               <button
                 class="profile__edit-button"
                 type="button"
                 aria-label="редактировать профиль"
               ></button>
             </div>
-            <p class="profile__subtitle">Любитель не сидеть на месте</p>
+            <p class="profile__subtitle"></p>
           </div>
           <div class="profile__form-add">
             <button
