feat: sprint №9 добавил в коструктор UserInfo свойство аватар

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <img
             class="profile__avatar"
             src=<%=require("./images/me-avatar.jpg")%>
-            alt="Портрет автора фотографий - Рыбакова Ильи"
+            alt="Портрет автора"
           />
           <div class="profile__info">
             <div class="profile__title-container">
