--- a/src/index.html
+++ b/src/index.html
@@ -198,11 +198,14 @@
           <img class="card__image" alt="#" src="#" />
           <div class="card__caption">
             <h2 class="card__caption-title"></h2>
-            <button
-              class="card__button-like"
-              aria-label="лайк"
-              type="button"
-            ></button>
+            <div class="card__like-wrapper">
+              <button
+                class="card__button-like"
+                aria-label="лайк"
+                type="button"
+              ></button>
+              <p class="card__like-count">1</p>
+            </div>
           </div>
         </article>
       </li>
