feat: sprint №9 прикрутил к формам loader

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
               <span class="userJob-input-error popup__input-error"></span>
             </div>
 
-            <button class="popup__submit" type="submit">Сохранить</button>
+            <button class="popup__submit" type="submit" name="popupSubmit">Сохранить</button>
           </form>
         </div>
       </div>
@@ -131,7 +131,7 @@
 
             <span class="placeLink-input-error popup__input-error"></span>
           </div>
-          <button class="popup__submit" type="submit">Сохранить</button>
+          <button class="popup__submit" type="submit" name="popupSubmit">Сохранить</button>
         </form>
       </div>
     </div>
@@ -182,7 +182,7 @@
             />
             <span class="avatarLink-input-error popup__input-error"></span>
           </div>
-          <button class="popup__submit" type="submit">Сохранить</button>
+          <button class="popup__submit" type="submit" name="popupSubmit">Сохранить</button>
         </form>
       </div>
     </div>
