refactor: sprint №9 исправления после первого ревью

--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
           aria-label="закрыть форму добавления"
         ></button>
         <h3 class="popup__form-title">Вы уверены?</h3>
-        <form class="popup__form" name="addCardForm" novalidate>
+        <form class="popup__form" name="deleteCardForm" novalidate>
           <button class="popup__submit" type="submit">Да</button>
         </form>
       </div>
